android studio code optimization, lets hope for the best ;-)